--- a/build.assets/Makefile
+++ b/build.assets/Makefile
@@ -37,7 +37,8 @@ DEVBOX_PROTOC_PLATFORM_x86_64 = linux-x86_64
 DEVBOX_PROTOC_PLATFORM_arm64 = linux-aarch_64
 DEVBOX_PROTOC_PLATFORM := $(DEVBOX_PROTOC_PLATFORM_$(HOST_ARCH))
 
-PROTOC_VER ?= 3.6.1
+PROTOC_VER ?= 3.13.0
+PROTOC_PLATFORM := linux-x86_64
 GOGO_PROTO_TAG ?= v1.3.2
 
 BUILDBOX=quay.io/gravitational/teleport-buildbox:$(RUNTIME)
